codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_auth_suggestion_with_reason.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Google Calendar

  Reconnect Google Calendar on ChatGPT.

  URL
  https://chatgpt.com/apps/google-calendar/connector_google_calendar

  Sign in to this app in your browser, then return here.


  › 1. 打 开 登 录  URL
    2. 返 回
  使 用  tab / ↑ ↓ 移 动 ， enter 选 择 ， esc 关 闭
