codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_enable_suggestion_with_reason.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  使 用  $ 将 此 应 用 插 入 提 示 词 。

  Enable this app to use it for the current request.
  新 安 装 的 应 用 可 能 需 要 几 分 钟 才 会 出 现 在  /apps 中 。


  › 1. 在  ChatGPT 上 管 理
    2. 启 用 应 用
    3. 返 回
  使 用  tab / ↑ ↓ 移 动 ， enter 选 择 ， esc 关 闭
