codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_generic_url_elicitation.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  需 要 操 作
  服 务 器 ： payments

  Review the payment details to continue.

  URL
  https://payments.example/checkout/123

  在 浏 览 器 中 完 成 请 求 的 操 作 ， 然 后 返 回 这 里 。


  › 1. 打 开 链 接
    2. 返 回
  使 用  tab / ↑ ↓ 移 动 ， enter 选 择 ， esc 关 闭
