codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_generic_url_elicitation_confirmation.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  在 浏 览 器 中 完 成

  在 刚 打 开 的 浏 览 器 窗 口 中 完 成 请 求 的 操 作 。
  然 后 返 回 这 里 并 选 择 “我 已 完 成 ”。

  链 接 ：
  https://payments.example/checkout/123

  › 1. 我 已 完 成
    2. 返 回
  使 用  tab / ↑ ↓ 移 动 ， enter 选 择 ， esc 关 闭
